package ejercicio5.interfaz;

import ejercicio5.clases.Lienzo;

public interface ComandoDibujo {
    void ejecutar(Lienzo lienzo);
}
